feat(post): changing controller
